minor fixes & remove unused code